--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "mysql2": "^2.3.0",
+    "sanitize": "^2.1.0",
     "sequelize": "^6.6.5",
     "typescript": "^4.3.5"
   },
