--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^2.3.0",
     "sanitize": "^2.1.0",
     "sequelize": "^6.6.5",
+    "string-sanitizer": "^2.0.2",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
